--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <button>Saludar</button>
+        <button  onclick="alert('Hola!')">Saludar</button>
     </div>
 </body>
 </html>
