--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div style="background-color: green;padding: 5px;">
         <button  onclick="alert('Hola!')">Saludar</button>
     </div>
+    <script src="eventos.js"></script>
 </body>
 </html>
